# oxidize

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
docs/: CONTRIBUTING.md  api-reference.md  architecture.md  branching.md  cli-reference.md  configuration.md  getting-started.md  ignores.md  merge.md  notebook-support.md  provenance.md  remote.md  repl.md  security.md  semantic-diffs.md  storage.md  undo.md  workflow.md
oxide/cli/: main.py
oxide/cli/commands/: add.py  commit.py  init.py  log.py  status.py
oxide/core/: refs.py  repository.py
oxide/diff/: __init__.py  engine.py
oxide/index/: __init__.py  staging.py
oxide/objects/: __init__.py  types.py
oxide/storage/: backend.py  database.py
oxidize/cli/: main.py  repl.py
oxidize/cli/commands/: add.py  bisect.py  blame.py  branch.py  checkout.py  commit.py  diff.py  hooks.py  ignores.py  init.py  log.py  merge.py  notebook.py  remote.py  resolve.py  scan.py  show.py  stash.py  status.py  tag.py  undo.py
oxidize/core/: __init__.py  config.py  ignores.py  refs.py  repository.py
oxidize/diff/: __init__.py
oxidize/index/: __init__.py  staging.py
oxidize/merge/: __init__.py  structured.py  text.py  treewalk.py
oxidize/network/: remote.py
oxidize/notebook/: __init__.py  differ.py
oxidize/objects/: __init__.py  types.py
oxidize/provenance/: __init__.py  agent.py
oxidize/security/: __init__.py  scanner.py
oxidize/semantic/: __init__.py  differ.py  entities.py  parser.py
oxidize/staging/: __init__.py  stash.py
oxidize/storage/: __init__.py  backend.py  database.py
oxidize/undo/: __init__.py  journal.py  reverser.py
oxidize/workflow/: bisect.py  blame.py  hooks.py
scripts/: git_per_file_commits.py
tests/: conftest.py  test_diff.py  test_ignores.py  test_index.py  test_merge.py  test_merge_conflict_blame_remote.py  test_notebook.py  test_objects.py  test_provenance.py  test_refs_branches_tags.py  test_repository.py  test_scanner.py  test_semantic.py  test_storage.py  test_undo.py  test_workflow.py
