[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyoxidize"
version = "0.2.0"
description = "a version control system with semantic awareness built-in undo and interactive shell"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "deepmerge>=1.1",
]

[project.optional-dependencies]
semantic = [
    "py-tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
]
notebook = [
    "nbformat>=5.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
]

[project.scripts]
oxidize = "oxidize.cli.main:cli"
oxi = "oxidize.cli.repl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oxidize*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
